--- a/.github/workflows/create-auto-pr-for-merge-pr-in-main.yml
+++ b/.github/workflows/create-auto-pr-for-merge-pr-in-main.yml
@@ -9,7 +9,7 @@ jobs:
     name: release_pull_request
     steps:
     - name: checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@main
     - name: Trust GitHub workspace
       run:
         git config --global --add safe.directory '/github/workspace'
