Remove version from setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
 [metadata]
 name = openshift-python-utilities
-version = 4.11.0
+version =
 author = Meni Yakove, Ruth Netser
 author_email = rnetser@redhat.com
 description = Wrapper around https://github.com/openshift/openshift-python-utilities
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/RedHatQE/openshift-python-utilities
-download_url = https://github.com/RedHatQE/openshift-python-utilities/archive/refs/tags/v4.11.0.tar.gz
+download_url =
 
 project_urls =
     Bug Tracker = https://github.com/RedHatQE/openshift-python-utilities/issues
