Use logger from python simple-logger

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dependencies = [
     "pytest-testconfig",
     "PyYAML",
     "openshift-python-wrapper-data-collector",
+    "python-simple-logger",
 ]
 dynamic = ["version"]
 # ...
