--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ python-simple-logger = "^1.0.5"
 
 [tool.poetry.group.dev.dependencies]
 ipdb = "^0.13.13"
+ipython = "*"
 
 [tool.poetry-dynamic-versioning]
 enable = true
