--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,9 @@ python-simple-logger = ">=1.0.5"
 timeout-sampler = ">=0.0.1"
 openshift-python-wrapper = ">=10.0.4"
 pytest = "^8.0.0"
+beautifulsoup4 = "^4.12.3"
+requests = "^2.31.0"
+semver = "^3.0.2"
 
 [tool.poetry.group.dev.dependencies]
 ipdb = "^0.13.13"
