deprecate get_client

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ beautifulsoup4 = "^4.12.3"
 requests = "^2.31.0"
 semver = "^3.0.2"
 pyhelper-utils = "^0.0.22"
+deprecation = "^2.1.0"
 
 [tool.poetry.group.dev.dependencies]
 ipdb = "^0.13.13"
