--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,14 @@
 [project]
 name = "openshift-python-utilities"
-version = "6.0.4"
+version = "6.0.5"
 description = "A utilities repository for https://github.com/RedHatQE/openshift-python-wrapper"
-authors = [
-  { name = "Meni Yakove", email = "myakove@gmail.com" },
-  { name = "Ruth Netser", email = "rnetser@gmail.com" },
-]
 requires-python = "~=3.9"
 readme = "README.md"
 license = "Apache-2.0"
-keywords = ["Openshift", "ocp"]
+keywords = [ "Openshift", "ocp" ]
 classifiers = [
   "Programming Language :: Python :: 3",
-  "Operating System :: OS Independent",
+  "Operating System :: OS Independent"
 ]
 dependencies = [
   "colorlog>=6.7.0,<7",
@@ -25,14 +21,22 @@ dependencies = [
   "requests>=2.31.0,<3",
   "semver>=3.0.2,<4",
   "pyhelper-utils>=0.0.22",
-  "deprecation>=2.1.0,<3",
+  "deprecation>=2.1.0,<3"
 ]
 
-[project.urls]
-Homepage = "https://github.com/RedHatQE/openshift-python-utilities"
-Documentation = "https://github.com/RedHatQE/openshift-python-utilities/blob/main/README.md"
-Download = "https://pypi.org/project/openshift-python-utilities/"
-"Bug Tracker" = "https://github.com/RedHatQE/openshift-python-utilities/issues"
+  [[project.authors]]
+  name = "Meni Yakove"
+  email = "myakove@gmail.com"
+
+  [[project.authors]]
+  name = "Ruth Netser"
+  email = "rnetser@gmail.com"
+
+  [project.urls]
+  Homepage = "https://github.com/RedHatQE/openshift-python-utilities"
+  Documentation = "https://github.com/RedHatQE/openshift-python-utilities/blob/main/README.md"
+  Download = "https://pypi.org/project/openshift-python-utilities/"
+  "Bug Tracker" = "https://github.com/RedHatQE/openshift-python-utilities/issues"
 
 [tool.ruff]
 preview = true
@@ -40,11 +44,8 @@ line-length = 120
 fix = true
 output-format = "grouped"
 
-[dependency-groups]
-dev = ["ipdb>=0.13.13,<0.14", "ipython"]
-
-[tool.ruff.format]
-exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]
+  [tool.ruff.format]
+  exclude = [ ".git", ".venv", ".mypy_cache", ".tox", "__pycache__" ]
 
 [tool.mypy]
 check_untyped_defs = true
@@ -56,11 +57,14 @@ show_error_codes = true
 warn_unused_ignores = true
 
 [tool.hatch.build.targets.sdist]
-include = ["ocp_utilities"]
+include = [ "ocp_utilities" ]
 
 [tool.hatch.build.targets.wheel]
-include = ["ocp_utilities"]
+include = [ "ocp_utilities" ]
+
+[dependency-groups]
+dev = [ "ipdb>=0.13.13,<0.14", "ipython" ]
 
 [build-system]
-requires = ["hatchling"]
+requires = [ "hatchling" ]
 build-backend = "hatchling.build"
